/*
 * Copyright (C) 2021 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package android.hardware.automotive.vehicle.proto;

import "android/hardware/automotive/vehicle/StatusCode.proto";
import "android/hardware/automotive/vehicle/VehiclePropValue.proto";

message VehiclePropValueRequest {
    int64 request_id = 1;
    VehiclePropValue value = 2;
};

message UpdateSampleRateRequest {
    /* Property identifier */
    int32 prop = 1;

    /* Area type(s) for non-global property it must be one of the value from
     * VehicleArea* enums or 0 for global properties. */
    int32 area_id = 2;

    float sample_rate = 3;
};

message SetValueResult {
    int64 request_id = 1;
    StatusCode status = 2;
};

message GetValueResult {
    int64 request_id = 1;
    StatusCode status = 2;
    VehiclePropValue value = 3;
};

message VehiclePropValueRequests {
    repeated VehiclePropValueRequest requests = 1;
};

message SetValueResults {
    repeated SetValueResult results = 1;
};

message GetValueResults {
    repeated GetValueResult results = 1;
};
